<resources>
    <string name="app_name">PrimeraEvaluacion</string>
    <string name="msgNuevoEstu">Nuevo estudiante</string>
    <string name="msgListaEstu">Lista de estudiantes</string>
    <string name="msgDatos">Mis datos</string>
    <string name="correlativo">1</string>
    <string name="codigo">CM16-I04-001</string>
    <string name="nombre">Carlos Javier Cañénguez Martínez</string>
    <string name="materia">Dispositivos</string>
    <string name="tituloDatos">Mis datos</string>

    <string name="mNombre">Nombre:</string>
    <string name="mCodigo">Código:</string>
    <string name="mMateria">Materia:</string>
    <string name="mPrimer">Primer parcial:</string>
    <string name="mSegundo">Segundo parcial:</string>
    <string name="mTercero">Tercer parcial:</string>
    <string name="mGuardar">Guardar</string>
</resources>
