<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoEstudiante">

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mNombre"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </TextView>

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mCodigo"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </TextView>

        <EditText
            android:id="@+id/edtCodigo"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mMateria"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </TextView>

        <EditText
            android:id="@+id/edtMateria"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mPrimer"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </TextView>

        <EditText
            android:id="@+id/edtPrimer"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mSegundo"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </TextView>

        <EditText
            android:id="@+id/edtSegundo"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/mTercero"
            android:textSize="15dp"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

        </TextView>

        <EditText
            android:id="@+id/edtTercer"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:onClick="OnClickGuardar"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/mGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </Button>

</LinearLayout>