<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txvCorrelativo"
                android:textSize="75dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/correlativo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txvNombre"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <TextView
                    android:id="@+id/txvCodigo"
                    android:textSize="20dp"
                    android:text="@string/codigo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txvMateria"
                        android:textSize="20dp"
                        android:text="@string/materia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>

                    <TextView
                        android:id="@+id/txvPromedio"
                        android:textSize="20dp"
                        android:layout_marginLeft="15dp"
                        android:text="@string/materia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>